dev1 version1 Checkin

--- a/public/index.html
+++ b/public/index.html
@@ -62,6 +62,7 @@
         if (toString.call(v) !== "[object String]") {
           v = JSON.stringify(v);
         }
+		console.log(k + "=" + v + "\n");
         return k + "=" + v + "\n";
       }
     </script>
