--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,8 @@
       };
       mic.onresult = function (intent, entities) {
         var r = kv("intent", intent);
-
+        console.log(getQueryObject(entities))
+		  
         for (var k in entities) {
           var e = entities[k];
 
@@ -54,7 +55,7 @@
         info("Microphone is not connected");
       };
 
-      mic.connect("UEPYNL2LEZZRHQFBSVJ2YZUGR5D2HOJA");
+      mic.connect("PHRXE4JM2GWEVMHBCO63VSIKHZ7ZCACI");
       // mic.start();
       // mic.stop();
 
@@ -65,6 +66,23 @@
 		console.log(k + "=" + v + "\n");
         return k + "=" + v + "\n";
       }
+	  
+	  function getQueryObject(entities) {
+    var queryObj = {};
+    if (entities.hasOwnProperty("brands")) {
+        queryObj.brands = entities.brands.value;
+    }
+    if (entities.hasOwnProperty("pants")) {
+        queryObj.pants = entities.pants.value;
+    }
+    if (entities.hasOwnProperty("color")) {
+        queryObj.color = entities.color.value;
+    }
+    if (entities.hasOwnProperty("shirt")) {
+        queryObj.shirt = entities.shirt.value;
+    }
+    return queryObj;
+}
     </script>
   </body>
   </html>
